--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>Scout24</title>
   <base href="/">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
